chore: update common and switch dependencies, README, and integration test